fix: gemini-code-assist 리뷰 기반 리펙토링